--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,6 +207,12 @@
     <string name="bill_code">Mã hóa đơn</string>
     <string name="deadline">Kỳ hạn thanh toán</string>
     <string name="udpate_profile">Cập nhật tài khoản</string>
+    <string name="customer_id">Mã khách hàng</string>
+    <string name="customer_name">Tên khách hàng</string>
+    <string name="customer_address">Địa chỉ</string>
+    <string name="customer_date">Kỳ hạn thanh toán</string>
+    <string name="customer_fee">Phí giao dịch</string>
+    <string name="free">Miễn phí</string>
 
 
 </resources>
